# tatra-teams

./: .flake8  .gitignore  README.md  helper_functions.py  main.py  pyproject.toml
app/: audio_processing.py  main.py
tests/test_audio_processing/: test_record_mic_and_out.py
tests/test_helper_functions/: test_get_next_filename.py
tests/test_utils/: test_get_next_filename.py
